<resources>
    <string name="app_name">Mechanix</string>
    <string name="button">Button</string>
    <string name="mechanix">Mechanix</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="category">Category</string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="map">Map</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="textview">TextView</string>
    <string name="location">Location</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_expert">Are You Expert?</string>
    <string name="title_activity_maps2">Map</string>
    <string name="statement">Statement</string>
    <string name="request">Request</string>
    <string name="select_date">Select Date</string>
</resources>