<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestForm"
    android:background="@drawable/cream">

    <EditText
        android:id="@+id/editStatement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="281dp"
        android:layout_marginBottom="51dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/statement"
        app:layout_constraintBottom_toTopOf="@+id/dateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/select_date"
        app:layout_constraintBottom_toTopOf="@+id/requestingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editStatement" />

    <Button
        android:id="@+id/requestingButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="177dp"
        android:text="@string/request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />
</androidx.constraintlayout.widget.ConstraintLayout>