<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cream"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="37dp"
        android:contentDescription="@string/todo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/pWorkPlaceName"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="128dp"
        android:layout_height="36dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:layout_marginBottom="64dp"
        android:text="@string/mechanix"
        android:textColor="#116062"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pWorkPlaceName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/pWorkPlaceName"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:text="@string/textview"
        android:textColorHint="#116062"
        android:hint="Workplace Name"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:gravity="center"
        android:backgroundTint="#a9b2b8"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/pAdress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <TextView
        android:id="@+id/pAdress"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:text="@string/textview"
        android:drawableLeft="@drawable/ic_adress"
        android:gravity="center"
        android:textColorHint="#116062"
        android:hint="Adress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/pName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pWorkPlaceName" />

    <TextView
        android:id="@+id/pName"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/textview"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:gravity="center"
        android:hint="Name"
        android:textColor="@color/black"
        android:textColorHint="#116062"
        app:layout_constraintBottom_toTopOf="@+id/pPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pAdress" />

    <TextView
        android:id="@+id/pPhone"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:text="@string/textview"
        android:drawableLeft="@drawable/ic_phone"
        android:gravity="center"
        android:hint="Phone"
        android:textColor="@color/black"
        android:textColorHint="#116062"
        app:layout_constraintBottom_toTopOf="@+id/uCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pName" />
    <TextView
        android:id="@+id/uCategory"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:text="@string/textview"
        android:hint="Category"
        android:drawableLeft="@drawable/ic_work"
        android:gravity="center"
        android:textColor="@color/black"
        android:textColorHint="#116062"
        app:layout_constraintBottom_toTopOf="@+id/pEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pPhone" />
    <TextView
        android:id="@+id/pEmail"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:text="@string/textview"
        android:hint="@string/e_mail"
        android:drawableLeft="@drawable/ic_mail"
        android:gravity="center"
        android:textColorHint="#116062"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/pLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uCategory" />
    <Button
        android:id="@+id/pLocation"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:text="@string/location"
        app:layout_constraintBottom_toTopOf="@+id/pUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pEmail" />
    <Button
        android:id="@+id/pUpdate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:text="@string/update"
        app:layout_constraintBottom_toTopOf="@+id/pSignOut"
        app:layout_constraintEnd_toEndOf="@+id/pSignOut"
        app:layout_constraintStart_toStartOf="@+id/pSignOut"
        app:layout_constraintTop_toBottomOf="@+id/pLocation" />

    <Button
        android:id="@+id/pSignOut"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>