<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cream"
    tools:context=".ProfileUpdateActivity">

    <ImageView
        android:id="@+id/imageview1"
        android:layout_width="88dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:contentDescription="@string/todo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="143dp"
        android:layout_height="44dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:text="@string/mechanix"
        android:textColor="#116062"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageview"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/uWorkspace"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:hint="Workspace"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/uAdress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/uAdress"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Adress"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_adress"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/uName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/uName"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:text="Name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/uPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/uPhone"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_phone"
        android:textColor="@color/black"
        android:hint="Phone"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/spinner1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="251dp"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_work"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/uEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/uEmail"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/e_mail"
        android:drawableLeft="@drawable/ic_mail"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/updateLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/updateLocation"
        android:layout_width="203dp"
        android:layout_height="76dp"
        android:text="Update Location"
        app:layout_constraintBottom_toTopOf="@+id/acceptButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

    </Button>

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="198dp"
        android:layout_height="52dp"
        android:layout_marginBottom="44dp"
        android:text="Accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>